[gd_scene load_steps=12 format=3 uid="uid://b08ig35eso0ox"]

[ext_resource type="Script" uid="uid://b7j4utq80hr78" path="res://game/game.gd" id="1_80nbo"]
[ext_resource type="Texture2D" uid="uid://dnf6uu0bnvoro" path="res://sprite/arena.png" id="2_dxrkv"]
[ext_resource type="PackedScene" uid="uid://cg3jfm0s4gfj4" path="res://player/character.tscn" id="4_ryrav"]
[ext_resource type="PackedScene" uid="uid://5hv1etavr06c" path="res://touch_screen/touch_screen_controler.tscn" id="5_dxrkv"]
[ext_resource type="PackedScene" uid="uid://blabc1royaiag" path="res://healthbar/healthbar.tscn" id="6_dakft"]
[ext_resource type="PackedScene" uid="uid://clfvkqd0lle4" path="res://rival/rival.tscn" id="6_ryrav"]
[ext_resource type="Script" uid="uid://p5wjjftt8jqm" path="res://game/hud.gd" id="6_y36n6"]
[ext_resource type="Theme" uid="uid://cjio8qyohpybk" path="res://game/hud_style.tres" id="7_y36n6"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u13ga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8tme"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vho3"]
bg_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")

[node name="Arena" type="Sprite2D" parent="."]
z_index = -11
texture = ExtResource("2_dxrkv")
centered = false

[node name="Character" parent="." node_paths=PackedStringArray("touch_controlles") instance=ExtResource("4_ryrav")]
unique_name_in_owner = true
position = Vector2(262, 184)
touch_controlles = NodePath("../TouchScreenControler")

[node name="Rival" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(310, 92)

[node name="TouchScreenControler" parent="." instance=ExtResource("5_dxrkv")]
layer = 2
visible = false

[node name="ScreenEdges" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(624, 171)
rotation = -1.57079
shape = SubResource("WorldBoundaryShape2D_u13ga")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(322, 352)
shape = SubResource("WorldBoundaryShape2D_u13ga")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(296, 0)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_u13ga")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(0, 167)
rotation = 1.57079
shape = SubResource("WorldBoundaryShape2D_u13ga")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6_y36n6")

[node name="Panel" type="Panel" parent="HUD"]
offset_right = 83.0
offset_bottom = 359.0
theme = ExtResource("7_y36n6")
theme_override_styles/panel = SubResource("StyleBoxFlat_j8tme")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 120.0
scale = Vector2(0.7, 0.7)

[node name="effect1" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "effect 1"

[node name="effect2" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "effect 2"

[node name="effect3" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "effect 3"

[node name="effect4" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "effect 3"

[node name="effect5" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "effect 3"

[node name="effect6" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "effect 3"

[node name="Label" type="Label" parent="HUD/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 79.0
offset_bottom = 28.0
text = "Potion effects"

[node name="healthbar" parent="HUD/Panel" instance=ExtResource("6_dakft")]
position = Vector2(-14, -131)

[node name="hp" type="Label" parent="HUD/Panel/healthbar"]
unique_name_in_owner = true
offset_left = 56.0
offset_top = 331.0
offset_right = 131.0
offset_bottom = 354.0
theme = ExtResource("7_y36n6")
text = "hp 15"

[node name="Panel2" type="Panel" parent="HUD"]
offset_left = -2.0
offset_top = 301.0
offset_right = 633.0
offset_bottom = 381.0
theme = ExtResource("7_y36n6")
theme_override_styles/panel = SubResource("StyleBoxFlat_3vho3")

[node name="w" type="HBoxContainer" parent="HUD/Panel2"]
layout_mode = 0
offset_left = 223.0
offset_top = 7.0
offset_right = 505.0
offset_bottom = 54.0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel2/w"]
layout_mode = 2

[node name="condition" type="Label" parent="HUD/Panel2/w/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "condition1"

[node name="condition2" type="Label" parent="HUD/Panel2/w/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "condition2"

[node name="condition3" type="Label" parent="HUD/Panel2/w/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "condition3"

[node name="VBoxContainer3" type="VBoxContainer" parent="HUD/Panel2/w"]
layout_mode = 2

[node name="b" type="Label" parent="HUD/Panel2/w/VBoxContainer3"]
layout_mode = 2
text = "-->"

[node name="b2" type="Label" parent="HUD/Panel2/w/VBoxContainer3"]
layout_mode = 2
text = "-->"

[node name="b3" type="Label" parent="HUD/Panel2/w/VBoxContainer3"]
layout_mode = 2
text = "-->"

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/Panel2/w"]
layout_mode = 2

[node name="negeffect1" type="Label" parent="HUD/Panel2/w/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "negeffect1"

[node name="negeffect2" type="Label" parent="HUD/Panel2/w/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "negeffect2"

[node name="negeffect3" type="Label" parent="HUD/Panel2/w/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "negeffect3"

[node name="VSeparator" type="VSeparator" parent="HUD/Panel2/w"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="HUD/Panel2/w"]
layout_mode = 2

[node name="condition4" type="Label" parent="HUD/Panel2/w/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "condition1"

[node name="condition5" type="Label" parent="HUD/Panel2/w/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "condition2"

[node name="condition6" type="Label" parent="HUD/Panel2/w/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "condition3"

[node name="VBoxContainer5" type="VBoxContainer" parent="HUD/Panel2/w"]
layout_mode = 2

[node name="b" type="Label" parent="HUD/Panel2/w/VBoxContainer5"]
layout_mode = 2
text = "-->"

[node name="b2" type="Label" parent="HUD/Panel2/w/VBoxContainer5"]
layout_mode = 2
text = "-->"

[node name="b3" type="Label" parent="HUD/Panel2/w/VBoxContainer5"]
layout_mode = 2
text = "-->"

[node name="VBoxContainer6" type="VBoxContainer" parent="HUD/Panel2/w"]
layout_mode = 2

[node name="negeffect4" type="Label" parent="HUD/Panel2/w/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "negeffect1"

[node name="negeffect5" type="Label" parent="HUD/Panel2/w/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "negeffect2"

[node name="negeffect6" type="Label" parent="HUD/Panel2/w/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "negeffect3"

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/Panel2"]
layout_mode = 0
offset_left = 320.0
offset_top = 6.0
offset_right = 452.0
offset_bottom = 53.0
scale = Vector2(0.7, 0.7)

[node name="Panel3" type="Panel" parent="HUD"]
offset_left = 558.0
offset_top = -2.0
offset_right = 632.0
offset_bottom = 357.0
theme = ExtResource("7_y36n6")
theme_override_styles/panel = SubResource("StyleBoxFlat_j8tme")

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/Panel3"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 68.0
offset_bottom = 174.0

[node name="player score" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "Score"

[node name="pscore int" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="rival score" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "Rival Score"

[node name="rscore int" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Combo" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "Kill Combo"

[node name="combo int" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "50"
horizontal_alignment = 1

[node name="quick combo" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "Time Combo"

[node name="qcombo int" type="Label" parent="HUD/Panel3/VBoxContainer2"]
layout_mode = 2
text = "3"
horizontal_alignment = 1
